--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -97,7 +97,7 @@
 				<div class="col-lg-12 border-top pt-3">	</div>
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
-					  <li class="list-group-item lg-mh-40 text-capitalize">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
+					  <li class="list-group-item lg-mh-40 text-capitalize">{{"dashboard.knowledgeOn" | translate }}</li>
               <li class="list-group-item text-capitalize">{{"postJob.programmingSkills" | translate }}</li>
               <li class="list-group-item text-capitalize">{{"postYourResume.others" | translate }}</li>
               <li class="list-group-item text-capitalize">{{"postJob.certification" | translate }}</li>
