--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
@@ -18,7 +18,8 @@
       <div class="col-lg-12 tabs-animated" id="myTab">
         <form method="post" #candidateNgForm="ngForm" [formGroup]="candidateForm">
           <app-create-candidate-header #target [currentTabInfo]="currentTabInfo"
-            (onTabChangeEvent)="onHeaderTabChange($event)">
+            (onTabChangeEvent)="onHeaderTabChange($event)"
+            [createCandidateForm]="candidateForm">
           </app-create-candidate-header>
 
           <div class="tab-content" [@animSlider]="slidingCounter">
