--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -37,7 +37,7 @@
   <div class="col-lg-12 border-top pt-3"> </div>
   <div class="col-lg-4 caption">
     <ul class="list-group">
-      <li class="list-group-item">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
+      <li class="list-group-item">{{"dashboard.knowledgeOn" | translate }}</li>
       <li class="list-group-item">{{"postJob.programmingSkills" | translate }}</li>
       <li class="list-group-item">{{"postYourResume.others" | translate }}</li>
       <li class="list-group-item">{{"postJob.certification" | translate }}</li>
