--- a/frontend/src/app/modules/features/employer/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/modal/job-preview/job-preview.component.html
@@ -55,7 +55,7 @@
         <div class="col-lg-12 border-top pt-3"> </div>
         <div class="col-lg-4 caption">
           <ul class="list-group">
-            <li class="list-group-item text-capitalize lg-mh-40">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
+            <li class="list-group-item text-capitalize lg-mh-40">{{"dashboard.knowledgeOn" | translate }}</li>
             <li class="list-group-item text-capitalize">{{"postJob.programmingSkills" | translate }}</li>
             <li class="list-group-item text-capitalize">{{"postJob.niceToHave" | translate }}</li>
             <li class="list-group-item text-capitalize">{{"postJob.certification" | translate }}</li>
