--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -97,7 +97,7 @@
   <div class="row mt-3">
     <div class="col-lg-12 col-md-6">
       <div class=" form-group">
-        <label>{{"postJob.knowledgeOnOtherSapSkills" | translate }} </label>
+        <label>{{"dashboard.knowledgeOn" | translate }} </label>
         <ngx-select
         class="text-capitalize"
         [placeholder]="'Select Other SAP Skills'"
