--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -1,5 +1,5 @@
- <!-- Sub Header Section -->
- <section class="sub-header">
+<!-- Sub Header Section -->
+<section class="sub-header">
   <div class="container">
     <div class="row">
       <div class="col-lg-5">
@@ -10,96 +10,145 @@
     </div>
   </div>
 </section>
-  <!-- //Sub Header Section -->
+<!-- //Sub Header Section -->
 <section class="my-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 title">
-        <h2>Company Details</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 col-md-6">
-        <div class=" form-group">
-          <label>Company Name</label>
-          <input type="text" class="form-control" placeholder="First Name" value="SAP India Pvt. Ltd">
-        </div>
-        <div class=" form-group">
-          <label>Email Address</label>
-          <input type="email" class="form-control" placeholder="username@mail.com" value="sapfi-department22@gmail.com">
-        </div>
-        <div class=" form-group">
-          <label>Address Line 1</label>
-          <input type="text" class="form-control" placeholder="Address Line 1">
-        </div>
-        <div class=" form-group">
-          <label>State</label>
-          <select class="form-control" name="job-type">
-          <option selected="" disabled="">Select State</option>
-          <option >State 1</option>
-          <option >State 2</option>
-          <option >State 3</option>
-          <option >State 4</option>
-          <option >State 5</option>
-          </select>
-        </div>
-        <div class=" form-group">
-          <label>Zip Code</label>
-          <input type="text" class="form-control" placeholder="Zip Code">
+  <form method="post" #companyNgForm="ngForm" [formGroup]="createCompanyForm" (ngSubmit)="onSaveComapnyInfo()">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 title">
+          <h2>Company Details</h2>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="form-group">
-          <label>Department</label>
-          <input type="text" class="form-control" placeholder="Last Name" value="Financial Department">
+      <div class="row">
+        <div class="col-lg-4 col-md-6">
+          <div class=" form-group">
+            <label>Company Name</label>
+            <input formControlName="name" type="text" class="form-control" placeholder="Company Name" value="">
+            <app-control-messages [control]="f['name']"></app-control-messages>
+          </div>
+
+          <div class=" form-group">
+            <label>Email Address</label>
+            <input formControlName="email_id" type="email" class="form-control" placeholder="username@mail.com" value="sapfi-department22@gmail.com">
+            <app-control-messages [control]="f['email_id']"></app-control-messages>
+          </div>
+          <div class=" form-group">
+            <label>Address</label>
+            <input formControlName="address" type="text" class="form-control" placeholder="Ex. Plot No/Street">
+            <app-control-messages [control]="f['address']"></app-control-messages>
+          </div>
+          <div class="form-group">
+            <label>{{"postYourResume.state" | translate}}</label>
+            <input formControlName="state" type="text" class="form-control text-capitalize"
+              [placeholder]="'postYourResume.state' | translate">
+            <app-control-messages [control]="f['state']"></app-control-messages>
+          </div>
+
         </div>
-        <div class="form-group">
-          <label>Phone Number</label>
-          <input type="text" class="form-control" placeholder="+91 9876543210" value="+00 004 1234567">
+        <div class="col-lg-4 col-md-6">
+          <div class="form-group">
+            <label>Company Url</label>
+            <input formControlName="website" type="text" class="form-control" placeholder="www.wipro.com">
+            <app-control-messages [control]="f['website']"></app-control-messages>
+          </div>
+          <div class="form-group">
+            <label>Phone Number</label>
+            <input formControlName="contact" type="text" class="form-control" placeholder="+00 004 1234567">
+            <app-control-messages [control]="f['contact']"></app-control-messages>
+          </div>
+          <div class=" form-group">
+            <label>{{"postYourResume.city" | translate}}</label>
+            <input appMarkAsterisk ngx-google-places-autocomplete (onAddressChange)="handleAddressChange($event)"
+              formControlName="city" type="text" class="form-control text-capitalize"
+              [placeholder]="'postYourResume.city' | translate">
+          </div>
+          <app-control-messages [control]="f['city']"></app-control-messages>
+          <div class=" form-group">
+            <label>{{"postYourResume.zipCode" | translate}}</label>
+            <input appMarkAsterisk numbersOnly formControlName="zipcode" type="text" class="form-control"
+              [placeholder]="'postYourResume.zipCode' | translate">
+          </div>
+          <app-control-messages [control]="f['zipcode']"></app-control-messages>
         </div>
-        <div class=" form-group">
-          <label>Address Line 2</label>
-          <input type="text" class="form-control" placeholder="Address Line 2">
+        <div class="col-lg-4 mt-4 mt-4" style="z-index: 1;">
+          <div class="upload-box">
+            <div class="box text-center upload-image">
+              <img *ngIf="(defaultProfilePic || employerDetails?.photo)"
+                [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : employerDetails?.meta?.photo?.path+'/'+ employerDetails?.meta?.photo?.folder+'/'+employerDetails?.meta?.photo?.sizes?.medium+'/'+employerDetails?.photo+'?v='+ randomNum"
+                alt="upload-photo" class="img-fluid mx-auto rounded-circle border border-primary"
+                style="width:150px;height:150px;">
+              <input [style.top]="defaultProfilePic ? '-150px' : '0px'" type="file" class="upload-input" #companyImage
+                (change)="handleFileInput($event, CropImage);" />
+              <!-- <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple=""> -->
+              <label for="file-5">
+                <i class="fas fa-user-tie"></i>
+                <span>{{"postYourResume.uploadPhoto" | translate }} <br> ({{"postYourResume.dragAndDrop" | translate
+                  }})</span>
+              </label>
+            </div>
+          </div>
         </div>
-        <div class="form-group">
-          <label>City</label>
-          <select class="form-control" name="job-type">
-          <option selected="" disabled="">Select City</option>
-          <option >City 1</option>
-          <option >City 2</option>
-          <option >City 3</option>
-          <option >City 4</option>
-          <option >City 5</option>
-          </select>
+        <!-- <div class="col-lg-4 col-md-6 mt-4">
+          <div class="upload-box d-none d-lg-block">
+            <div class="box text-center">
+              <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple="">
+              <label for="file-5">
+                <i class="fas fa-image"></i>
+                <span>Upload Logo <br> (Drag and Drop)</span>
+              </label>
+            </div>
+          </div>
+        </div> -->
+        <div class="col-md-8 form-group">
+          <label>{{"postJob.country" | translate}}</label>
+          <input appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase"
+            [placeholder]="'postYourResume.country' | translate">
+
         </div>
+        <app-control-messages [control]="f['country']"></app-control-messages>
+        <div class="col-md-8 form-group">
+          <label>{{"postJob.jobDescription" | translate}}</label>
+          <angular-editor appMarkAsterisk formControlName="description" [config]="editorConfig"
+            [placeholder]="'postJob.jobDescription' | translate"></angular-editor>
+        </div>
+        <app-control-messages [control]="f['description']"></app-control-messages>
       </div>
-      <div class="col-lg-4 col-md-6 mt-4">
-        <div class="upload-box d-none d-lg-block">
-          <div class="box text-center">
-            <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple="">
-            <label for="file-5">
-              <i class="fas fa-image"></i>
-              <span>Upload Logo <br> (Drag and Drop)</span>
-            </label>
+      <div class="row mt-5">
+        <div class="col-lg-4 col-md-6">
+          <div class="form-group">
+            <button type="button" class="btn btn-secondary btn-block btn-lg">Cancel</button>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="form-group">
+            <button type="submit" class="btn btn-theme-blue btn-block btn-lg">Submit</button>
           </div>
         </div>
       </div>
-      <div class="col-md-8 form-group">
-        <label>About Us</label>
-        <textarea name="job-description" rows="4" class="form-control" placeholder="About comapny...."></textarea>
-      </div>
     </div>
-    <div class="row mt-5">
-      <div class="col-lg-4 col-md-6">
-        <div class="form-group">
-          <button type="button" class="btn btn-secondary btn-block btn-lg">Cancel</button>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="form-group">
-          <button type="button" [routerLink]="['/employer/profile']"  class="btn btn-theme-blue btn-block btn-lg">Submit</button>
-        </div>
-      </div>
-    </div>
-  </div>
+  </form>
+
 </section>
+
+
+<ng-template #CropImage let-modal let-d="dismiss">
+  <form>
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+        (click)="mbRef.close('Closed from Close button')">
+        <span>Close</span>
+        <i class="fas fa-times right ml-2"></i>
+      </button>
+    </div>
+    <div class="modal-body">
+      <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="1 / 1"
+        [autoCrop]="true" [resizeToWidth]="295" format="png" (imageCropped)="imageCropped($event)"
+        (imageLoaded)="imageLoaded()" (loadImageFailed)="loadImageFailed($event)">
+      </image-cropper>
+    </div>
+    <div class="modal-footer mt-3">
+      <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="SetPreviousProfilePic()">Cancel</button>
+      <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="onImageCropSave()">Save</button>
+    </div>
+  </form>
+</ng-template>
