--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -60,7 +60,7 @@
   <div class="row mt-3">
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
-        <label>{{"postJob.knowledgeOnOtherSapSkills" | translate }} </label>
+        <label>{{"dashboard.knowledgeOn" | translate }} </label>
         <ngx-select
         class="text-capitalize"
         [placeholder]="'Select Skills'"
