--- a/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
+++ b/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
@@ -20,7 +20,8 @@
       <div class="col-lg-8 col-md-7">
         <div class="row">
           <div class="col-lg-7 title mb-0">
-            <h2><span>Search results for "{{(skillString && skillString?.tag  && this.skills.includes(customParseInt(skillString?.id))) ? utilsHelperService.onSplitTag(skillString?.tag) : ''}}{{(skillString && cityString) ? ', ' : ''}}{{cityString ? cityString : ''}}"</span></h2>
+            <h2 class="text-capitalize"><span>Search results for "{{(skillString) ? skillString : ''}}{{(skillString && cityString) ? ', ' : ''}}{{cityString ? cityString : ''}}"</span></h2>
+            <!-- <h2><span>Search results for "{{(skillString && skillString?.tag  && this.skills.includes(customParseInt(skillString?.id))) ? utilsHelperService.onSplitTag(skillString?.tag) : ''}}{{(skillString && cityString) ? ', ' : ''}}{{cityString ? cityString : ''}}"</span></h2> -->
           </div>
           <div class="col-lg-5">
             <form class="form-inline float-right">
