--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-lg-5 text-right mt-2">
                       <span data-toggle="modal" data-target="#exampleModal">
-                        <a (click)="onToggleResumeForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + item?.file))" class="btn btn-outline-blue btn-sm" href="javascript:;">
+                        <a (click)="onToggleResumeForm(true, (userMeta?.doc_resume?.path + '/' + userMeta?.doc_resume?.folder + '/' + onGetFilteredValue(item?.doc_resume)))" class="btn btn-outline-blue btn-sm" href="javascript:;">
                           <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate }}
                         </a>
                       </span>
