--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-header/create-candidate-header.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-header/create-candidate-header.component.html
@@ -28,3 +28,34 @@
     </a>
   </li>
 </ul>
+<!--
+<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 1}">
+    <a [ngClass]="{'active': currentTabInfo.tabNumber == 1}"
+      (click)="(currentTabInfo.tabNumber == 2 || (createCandidateForm.valid)) && onTabChange({tabName: 'Personal Detail', tabNumber: 1})" class="nav-link" href="javascript:;">
+      {{"postYourResume.personalDetails" | translate }}
+    </a>
+  </li>
+
+  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
+    <a [ngClass]="{'active': currentTabInfo.tabNumber == 2}"
+      (click)="(currentTabInfo.tabNumber == 3 || (createCandidateForm.valid && currentTabInfo.tabNumber == 1)) && onTabChange({tabName: 'Education Experience', tabNumber: 2})" class="nav-link" href="javascript:;">
+      {{"postYourResume.educationExperience" | translate }}
+    </a>
+  </li>
+
+  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 3}">
+    <a [ngClass]="{'active': currentTabInfo.tabNumber == 3}"
+      (click)="(currentTabInfo.tabNumber == 4 || (createCandidateForm.valid && currentTabInfo.tabNumber == 2)) && onTabChange({tabName: 'Skillsets', tabNumber: 3})"
+      class="nav-link" href="javascript:;">
+      {{"postYourResume.skillsets" | translate }}
+    </a>
+  </li>
+
+  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 4}">
+    <a [ngClass]="{'active': currentTabInfo.tabNumber == 4}"
+      (click)="(currentTabInfo.tabNumber == 3 && createCandidateForm.valid) && onTabChange({tabName: 'Job Preference', tabNumber: 4})" class="nav-link" href="javascript:;">
+      {{"postYourResume.jobPreference" | translate }}
+    </a>
+  </li>
+</ul> -->
